# mkdocs_snakemake_rule_plugin

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  lint.yml  release-please.yml
mkdocs_snakemake_rule_plugin/: __init__.py  _version.py  markdown.py
tests/: test_markdown.py
