# Inside of setup.cfg
[metadata]
description_file = README.md
license_files=LICENSE.md

[options.extras_require]
dev =
    pytest>=7.0

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = mkdocs_snakemake_rule_plugin/_version.py
versionfile_build = mkdocs_snakemake_rule_plugin/_version.py
tag_prefix = v